[package]
name = "supercruise-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
async-trait = "0.1.53"
base64 = "0.13.0"
byteorder = "1.4.3"
bytes = "1.1.0"
futures = "0.3.21"
http = "0.2"
httparse = "1.6.0"
log = "0.4.14"
num_cpus = "1.0"
rand = "0.8.5"
sha = "1.0.3"
socket2 = { version="0.4", features = ["all"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.9"
trie-rs = { git = "https://github.com/hehaowen00/trie-rs.git" }

[dev-dependencies]
env_logger = "0.9.0"
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
